# CSexperience

./: README.md  coolguy.c
C++ cool things/: call_thing.c  define_var.c  function_overloading.cpp  testing_speed.cpp
C++ cool things/lunar_lander/: CMakeLists.txt
C++ cool things/lunar_lander/lib/: CMakeLists.txt
C++ cool things/lunar_lander/src/: engine.c  engine.h  plotter.c  plotter.h  pubsub.c
GPA - Calculator/: Format.txt  GPA.txt  gpa-calc-C.c  gpa-calc-Python.py
How BashScripting Works/: Here_is_how_to_do_it.sh
How MATLAB works/: howdoesode45work.m
How Python Works/: BackSlashR.py  LunaboticsMapping.py  basic_oop.py  finance.py  hey.py  iterative_banana_prob.py  makingNodesPoint_to_eachOther..py  plottinginPython.py  printinginPython.py  referencing_from_different_file.py  where_is_python_exe.py
How to traverse linkedlist/: basic_linkedlist.py
NVidia Deep Learning/: 01_mnist.ipynb  02_asl.ipynb  03_asl_cnn.ipynb  04a_asl_augmentation.ipynb  04b_asl_predictions.ipynb  05a_doggy_door.ipynb  05b_presidential_doggy_door.ipynb  07_assessment.ipynb  Untitled.md  kerass.py
Project Euler/: code.py
ROS/Personal_Attempt/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/ProperAttempt/: puhlisher.py
ROS/firstRos/: puhlisher.py
ROS/ranDom/: yo.py
how to traverse linkedlist/: Testing how branches and subsequent pull.txt  countingnumofnodes.cpp  coutingnumofnodes.c
how to traverse linkedlist/C/: coutingnumofnodes.c  makelengthwork.c
udemy_ML_course/: notes.md  test_csv.csv  using_pandas.py
(+6 files in other folders)
